k8s/streamlit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
  namespace: accidents
  labels:
    app: streamlit
    component: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8501
    protocol: TCP
    name: http
  selector:
    app: streamlit
    component: frontend
