k8s/streamlit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accidents-ingress
  namespace: accidents
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - meteo-des-accidents.tgu.ovh
    secretName: accidents-tls-cert
  rules:
  - host: meteo-des-accidents.tgu.ovh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: accidents-service
            port:
              number: 80
